--- a/static/main.css
+++ b/static/main.css
@@ -1,7 +1,9 @@
 body {
   background: #f2f2f2;
   color: #212529;
-  font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue',
+    Arial, 'Noto Sans', sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+    'Noto Color Emoji';
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -19,10 +21,11 @@ a {
   text-decoration: none !important;
 }
 
-td, th {
+td,
+th {
   font-weight: 300;
   font-size: 12px;
-  letter-spacing: .1rem;
+  letter-spacing: 0.1rem;
   display: table-cell;
 }
 
